fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ body {
   padding: 5vh 5vh;
   border-radius: 3vh;
   transition-duration: 0.5s;
+  overflow-y: scroll;
 }
 
 .bi {
